--- a/JupyterIntro.ipnyb.ipynb
+++ b/JupyterIntro.ipnyb.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is Jupyter\n"
+      "This is Jupyter!!!!\n"
      ]
     }
    ],
    "source": [
-    "print(\"This is Jupyter\")"
+    "print(\"This is Jupyter!!!!\")"
    ]
   },
   {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -36,12 +36,12 @@
     }
    ],
    "source": [
-    "print(\"You can run one line at a time\")"
+    "print(\"You can run one line at a time!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!1\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "4         1   Bream   430.0  12.4440  5.1340     26.5     29.0     34.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
