--- a/TestScraping.ipnyb.ipynb
+++ b/TestScraping.ipnyb.ipynb
@@ -46,15 +46,15 @@
      "output_type": "stream",
      "text": [
       "Some test commands\n",
-      "New post test comment 21/10/2024 03:43:05\n",
-      "Descubre el Poder del Método Japonés Han-Sei para Transformar tu Vida\n",
-      "Photoshop request isnt letting me post\n",
-      "Test embed links\n",
-      "test 2\n",
-      "test\n",
-      "My First Post\n",
-      "test\n",
-      "test\n"
+      "Test me123\n",
+      "Test\n",
+      "just a test\n",
+      "zzasfda\n",
+      "My first text post with title \"The great cookie caper\"\n",
+      "Mikes number 1 enemey\n",
+      "Rage\n",
+      "please dont be mean to isaam :(\n",
+      "Test\n"
      ]
     }
    ],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -116,13 +116,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "postData = []\n",
-    "for submission in subreddit.hot(limit=1000):\n",
+    "for submission in subreddit.hot(limit=10000):\n",
     "        postData.append({\n",
     "        'title': submission.title,\n",
     "        'score': submission.score,  # upvotes\n",
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -172,53 +172,53 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>What Are Your Moves Tomorrow, October 21, 2024</td>\n",
-       "      <td>237</td>\n",
-       "      <td>1g87i2d</td>\n",
+       "      <td>What Are Your Moves Tomorrow, October 22, 2024</td>\n",
+       "      <td>67</td>\n",
+       "      <td>1g8z4d2</td>\n",
        "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
-       "      <td>2840</td>\n",
-       "      <td>1.729454e+09</td>\n",
+       "      <td>1438</td>\n",
+       "      <td>1.729541e+09</td>\n",
        "      <td>This post contains content not supported on ol...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Weekly Earnings Thread 10/21 -10/25</td>\n",
-       "      <td>283</td>\n",
+       "      <td>309</td>\n",
        "      <td>1g6yf0l</td>\n",
        "      <td>https://i.redd.it/5e4zyncicmvd1.jpeg</td>\n",
-       "      <td>341</td>\n",
+       "      <td>532</td>\n",
        "      <td>1.729303e+09</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Me, after putting all my money into shorting N...</td>\n",
-       "      <td>1085</td>\n",
-       "      <td>1g8felc</td>\n",
-       "      <td>https://i.redd.it/hby2n4m5s0wd1.jpeg</td>\n",
-       "      <td>57</td>\n",
-       "      <td>1.729477e+09</td>\n",
+       "      <td>Just put the fries in the bag</td>\n",
+       "      <td>1633</td>\n",
+       "      <td>1g8yz6v</td>\n",
+       "      <td>https://i.redd.it/6213bf29z5wd1.jpeg</td>\n",
+       "      <td>53</td>\n",
+       "      <td>1.729540e+09</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>$1Mil here I come!</td>\n",
-       "      <td>473</td>\n",
-       "      <td>1g8cddk</td>\n",
-       "      <td>https://www.reddit.com/gallery/1g8cddk</td>\n",
-       "      <td>119</td>\n",
-       "      <td>1.729468e+09</td>\n",
-       "      <td></td>\n",
+       "      <td>HOW DO I TELL MY PARENTS / FIANCÉ I LOST ALL M...</td>\n",
+       "      <td>1729</td>\n",
+       "      <td>1g8tfk7</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "      <td>1034</td>\n",
+       "      <td>1.729527e+09</td>\n",
+       "      <td>I’ll get a whole lecture if they find out, so ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Moved to Mexico and still can’t afford to live...</td>\n",
-       "      <td>526</td>\n",
-       "      <td>1g86ged</td>\n",
-       "      <td>https://i.redd.it/7pzkpyu9nyvd1.jpeg</td>\n",
-       "      <td>476</td>\n",
-       "      <td>1.729452e+09</td>\n",
-       "      <td>What do</td>\n",
+       "      <td>NVDA put buyers today</td>\n",
+       "      <td>397</td>\n",
+       "      <td>1g8zu8l</td>\n",
+       "      <td>https://i.redd.it/mn59i2ac56wd1.jpeg</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1.729542e+09</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -231,104 +231,104 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>517</th>\n",
-       "      <td>Spirit Airlines - A look into the future</td>\n",
-       "      <td>21</td>\n",
-       "      <td>1g11ned</td>\n",
-       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
-       "      <td>18</td>\n",
-       "      <td>1.728621e+09</td>\n",
-       "      <td>As many of you all know by now, Spirit Airline...</td>\n",
+       "      <th>492</th>\n",
+       "      <td>Betted on TSLA event failing and it worked</td>\n",
+       "      <td>104</td>\n",
+       "      <td>1g1hx64</td>\n",
+       "      <td>https://i.redd.it/c8mqsz8sh6ud1.jpeg</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1.728675e+09</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>518</th>\n",
-       "      <td>Netflix gains almost 100%</td>\n",
-       "      <td>41</td>\n",
-       "      <td>1g0y1jh</td>\n",
-       "      <td>https://www.reddit.com/gallery/1g0y1jh</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1.728608e+09</td>\n",
-       "      <td>All in ROTH IRA\\n \\n\\nTotal contribution since...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>519</th>\n",
-       "      <td>Pltr gains</td>\n",
-       "      <td>18</td>\n",
-       "      <td>1g12282</td>\n",
-       "      <td>https://i.redd.it/ic7apqk952ud1.png</td>\n",
-       "      <td>5</td>\n",
+       "      <th>493</th>\n",
+       "      <td>Optimus can talk</td>\n",
+       "      <td>1632</td>\n",
+       "      <td>1g11zlm</td>\n",
+       "      <td>https://v.redd.it/j4g0ig4g42ud1</td>\n",
+       "      <td>503</td>\n",
        "      <td>1.728622e+09</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>520</th>\n",
-       "      <td>In only five months. It was fun while it lasted</td>\n",
-       "      <td>53</td>\n",
-       "      <td>1g0uxfl</td>\n",
-       "      <td>https://i.redd.it/ee1w18ra80ud1.png</td>\n",
-       "      <td>39</td>\n",
-       "      <td>1.728599e+09</td>\n",
-       "      <td></td>\n",
+       "      <th>494</th>\n",
+       "      <td>Private Equity Taking Peloton Private? (PTON)</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1g0oewr</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1.728582e+09</td>\n",
+       "      <td>Listen up regards,\\n\\n[https://13f.info/manage...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>521</th>\n",
-       "      <td>When you hear that voice...</td>\n",
-       "      <td>1524</td>\n",
-       "      <td>zc1crl</td>\n",
-       "      <td>https://i.redd.it/lxdm9opoft3a1.png</td>\n",
-       "      <td>52</td>\n",
-       "      <td>1.670131e+09</td>\n",
+       "      <th>495</th>\n",
+       "      <td>Why is Warren Buffett hoarding such a huge cas...</td>\n",
+       "      <td>4406</td>\n",
+       "      <td>1fyzh4n</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "      <td>1227</td>\n",
+       "      <td>1.728393e+09</td>\n",
+       "      <td>https://preview.redd.it/u8w3e24o7jtd1.png?widt...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>496</th>\n",
+       "      <td>Just Another Day in the Life of a Retail Investor</td>\n",
+       "      <td>29417</td>\n",
+       "      <td>1fw6qhb</td>\n",
+       "      <td>https://i.redd.it/031uuuntcssd1.jpeg</td>\n",
+       "      <td>296</td>\n",
+       "      <td>1.728068e+09</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>522 rows × 7 columns</p>\n",
+       "<p>497 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                                 title  score       id  \\\n",
-       "0       What Are Your Moves Tomorrow, October 21, 2024    237  1g87i2d   \n",
-       "1                  Weekly Earnings Thread 10/21 -10/25    283  1g6yf0l   \n",
-       "2    Me, after putting all my money into shorting N...   1085  1g8felc   \n",
-       "3                                  $1Mil here I come!     473  1g8cddk   \n",
-       "4    Moved to Mexico and still can’t afford to live...    526  1g86ged   \n",
+       "0       What Are Your Moves Tomorrow, October 22, 2024     67  1g8z4d2   \n",
+       "1                  Weekly Earnings Thread 10/21 -10/25    309  1g6yf0l   \n",
+       "2                       Just put the fries in the bag    1633  1g8yz6v   \n",
+       "3    HOW DO I TELL MY PARENTS / FIANCÉ I LOST ALL M...   1729  1g8tfk7   \n",
+       "4                                NVDA put buyers today    397  1g8zu8l   \n",
        "..                                                 ...    ...      ...   \n",
-       "517          Spirit Airlines - A look into the future      21  1g11ned   \n",
-       "518                          Netflix gains almost 100%     41  1g0y1jh   \n",
-       "519                                        Pltr gains      18  1g12282   \n",
-       "520    In only five months. It was fun while it lasted     53  1g0uxfl   \n",
-       "521                        When you hear that voice...   1524   zc1crl   \n",
+       "492         Betted on TSLA event failing and it worked    104  1g1hx64   \n",
+       "493                                   Optimus can talk   1632  1g11zlm   \n",
+       "494      Private Equity Taking Peloton Private? (PTON)     24  1g0oewr   \n",
+       "495  Why is Warren Buffett hoarding such a huge cas...   4406  1fyzh4n   \n",
+       "496  Just Another Day in the Life of a Retail Investor  29417  1fw6qhb   \n",
        "\n",
        "                                                   url  comms_num  \\\n",
-       "0    https://www.reddit.com/r/wallstreetbets/commen...       2840   \n",
-       "1                 https://i.redd.it/5e4zyncicmvd1.jpeg        341   \n",
-       "2                 https://i.redd.it/hby2n4m5s0wd1.jpeg         57   \n",
-       "3               https://www.reddit.com/gallery/1g8cddk        119   \n",
-       "4                 https://i.redd.it/7pzkpyu9nyvd1.jpeg        476   \n",
+       "0    https://www.reddit.com/r/wallstreetbets/commen...       1438   \n",
+       "1                 https://i.redd.it/5e4zyncicmvd1.jpeg        532   \n",
+       "2                 https://i.redd.it/6213bf29z5wd1.jpeg         53   \n",
+       "3    https://www.reddit.com/r/wallstreetbets/commen...       1034   \n",
+       "4                 https://i.redd.it/mn59i2ac56wd1.jpeg         25   \n",
        "..                                                 ...        ...   \n",
-       "517  https://www.reddit.com/r/wallstreetbets/commen...         18   \n",
-       "518             https://www.reddit.com/gallery/1g0y1jh         14   \n",
-       "519                https://i.redd.it/ic7apqk952ud1.png          5   \n",
-       "520                https://i.redd.it/ee1w18ra80ud1.png         39   \n",
-       "521                https://i.redd.it/lxdm9opoft3a1.png         52   \n",
+       "492               https://i.redd.it/c8mqsz8sh6ud1.jpeg          9   \n",
+       "493                    https://v.redd.it/j4g0ig4g42ud1        503   \n",
+       "494  https://www.reddit.com/r/wallstreetbets/commen...         10   \n",
+       "495  https://www.reddit.com/r/wallstreetbets/commen...       1227   \n",
+       "496               https://i.redd.it/031uuuntcssd1.jpeg        296   \n",
        "\n",
        "          created                                               body  \n",
-       "0    1.729454e+09  This post contains content not supported on ol...  \n",
+       "0    1.729541e+09  This post contains content not supported on ol...  \n",
        "1    1.729303e+09                                                     \n",
-       "2    1.729477e+09                                                     \n",
-       "3    1.729468e+09                                                     \n",
-       "4    1.729452e+09                                           What do   \n",
+       "2    1.729540e+09                                                     \n",
+       "3    1.729527e+09  I’ll get a whole lecture if they find out, so ...  \n",
+       "4    1.729542e+09                                                     \n",
        "..            ...                                                ...  \n",
-       "517  1.728621e+09  As many of you all know by now, Spirit Airline...  \n",
-       "518  1.728608e+09  All in ROTH IRA\\n \\n\\nTotal contribution since...  \n",
-       "519  1.728622e+09                                                     \n",
-       "520  1.728599e+09                                                     \n",
-       "521  1.670131e+09                                                     \n",
+       "492  1.728675e+09                                                     \n",
+       "493  1.728622e+09                                                     \n",
+       "494  1.728582e+09  Listen up regards,\\n\\n[https://13f.info/manage...  \n",
+       "495  1.728393e+09  https://preview.redd.it/u8w3e24o7jtd1.png?widt...  \n",
+       "496  1.728068e+09                                                     \n",
        "\n",
-       "[522 rows x 7 columns]"
+       "[497 rows x 7 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
