Some simple addition, including a CSV of about 2,000 publical companies

--- a/TestScraping.ipnyb.ipynb
+++ b/TestScraping.ipnyb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -49,12 +49,12 @@
       "Test me123\n",
       "Test\n",
       "just a test\n",
-      "zzasfda\n",
       "My first text post with title \"The great cookie caper\"\n",
       "Mikes number 1 enemey\n",
       "Rage\n",
       "please dont be mean to isaam :(\n",
-      "Test\n"
+      "Test\n",
+      "ahhhh\n"
      ]
     }
    ],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -116,13 +116,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "postData = []\n",
-    "for submission in subreddit.hot(limit=10000):\n",
+    "# Fetch the top 100000 hot posts in the 'wallstreetbets' subreddit\n",
+    "for submission in subreddit.hot(limit=100000):\n",
+    "        if(submission.selftext == ''): #skip any posts that contain no text\n",
+    "            continue\n",
     "        postData.append({\n",
     "        'title': submission.title,\n",
     "        'score': submission.score,  # upvotes\n",
@@ -136,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -173,52 +176,52 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>What Are Your Moves Tomorrow, October 22, 2024</td>\n",
-       "      <td>67</td>\n",
+       "      <td>81</td>\n",
        "      <td>1g8z4d2</td>\n",
        "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
-       "      <td>1438</td>\n",
+       "      <td>1825</td>\n",
        "      <td>1.729541e+09</td>\n",
        "      <td>This post contains content not supported on ol...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Weekly Earnings Thread 10/21 -10/25</td>\n",
-       "      <td>309</td>\n",
-       "      <td>1g6yf0l</td>\n",
-       "      <td>https://i.redd.it/5e4zyncicmvd1.jpeg</td>\n",
-       "      <td>532</td>\n",
-       "      <td>1.729303e+09</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Just put the fries in the bag</td>\n",
-       "      <td>1633</td>\n",
-       "      <td>1g8yz6v</td>\n",
-       "      <td>https://i.redd.it/6213bf29z5wd1.jpeg</td>\n",
-       "      <td>53</td>\n",
-       "      <td>1.729540e+09</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
        "      <td>HOW DO I TELL MY PARENTS / FIANCÉ I LOST ALL M...</td>\n",
-       "      <td>1729</td>\n",
+       "      <td>1999</td>\n",
        "      <td>1g8tfk7</td>\n",
        "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
-       "      <td>1034</td>\n",
+       "      <td>1104</td>\n",
        "      <td>1.729527e+09</td>\n",
        "      <td>I’ll get a whole lecture if they find out, so ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>All eggs in one basket since last year.</td>\n",
+       "      <td>253</td>\n",
+       "      <td>1g8ze2n</td>\n",
+       "      <td>https://www.reddit.com/gallery/1g8ze2n</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1.729541e+09</td>\n",
+       "      <td>All long term investments (started Aug 2021). ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Decade of Big S&amp;P 500 Gains Is Over, Goldman S...</td>\n",
+       "      <td>1132</td>\n",
+       "      <td>1g8nu3u</td>\n",
+       "      <td>https://finance.yahoo.com/news/p-500-decade-bi...</td>\n",
+       "      <td>285</td>\n",
+       "      <td>1.729512e+09</td>\n",
+       "      <td>&gt;The S&amp;P 500 Index is expected to post an annu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>NVDA put buyers today</td>\n",
-       "      <td>397</td>\n",
-       "      <td>1g8zu8l</td>\n",
-       "      <td>https://i.redd.it/mn59i2ac56wd1.jpeg</td>\n",
-       "      <td>25</td>\n",
-       "      <td>1.729542e+09</td>\n",
-       "      <td></td>\n",
+       "      <td>What happens when a stock falls out of the S&amp;P...</td>\n",
+       "      <td>298</td>\n",
+       "      <td>1g8u2a5</td>\n",
+       "      <td>https://www.investopedia.com/delisting-a-stock...</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1.729528e+09</td>\n",
+       "      <td>ni</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -231,104 +234,104 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>492</th>\n",
-       "      <td>Betted on TSLA event failing and it worked</td>\n",
-       "      <td>104</td>\n",
-       "      <td>1g1hx64</td>\n",
-       "      <td>https://i.redd.it/c8mqsz8sh6ud1.jpeg</td>\n",
+       "      <th>341</th>\n",
+       "      <td>4600% on some lotto tickets.  Thanks AFRM 🫡</td>\n",
+       "      <td>130</td>\n",
+       "      <td>1g1o5lc</td>\n",
+       "      <td>https://www.reddit.com/gallery/1g1o5lc</td>\n",
+       "      <td>29</td>\n",
+       "      <td>1.728693e+09</td>\n",
+       "      <td>Too bad I sold 80 contracts for a 40% gain 😭😭</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>342</th>\n",
+       "      <td>Tesla short results</td>\n",
+       "      <td>831</td>\n",
+       "      <td>1g1afzh</td>\n",
+       "      <td>https://www.reddit.com/gallery/1g1afzh</td>\n",
+       "      <td>76</td>\n",
+       "      <td>1.728655e+09</td>\n",
+       "      <td>The shit show paid out as expected</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>343</th>\n",
+       "      <td>Being late pays off ig</td>\n",
+       "      <td>44</td>\n",
+       "      <td>1g1qzqz</td>\n",
+       "      <td>https://i.redd.it/grk1wjn6r8ud1.jpeg</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.728702e+09</td>\n",
+       "      <td>LITERALLY ALMOST NEVER CAN YOU GET INTO A TRAD...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>344</th>\n",
+       "      <td>Who said Options couldn't be profitable?</td>\n",
        "      <td>9</td>\n",
-       "      <td>1.728675e+09</td>\n",
-       "      <td></td>\n",
+       "      <td>1g1xlwx</td>\n",
+       "      <td>https://i.redd.it/amv2fztp3bud1.png</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1.728731e+09</td>\n",
+       "      <td>₹ 1L = ₹ 100000 for those wondering, wanted to...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>493</th>\n",
-       "      <td>Optimus can talk</td>\n",
-       "      <td>1632</td>\n",
-       "      <td>1g11zlm</td>\n",
-       "      <td>https://v.redd.it/j4g0ig4g42ud1</td>\n",
-       "      <td>503</td>\n",
-       "      <td>1.728622e+09</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>494</th>\n",
-       "      <td>Private Equity Taking Peloton Private? (PTON)</td>\n",
-       "      <td>24</td>\n",
-       "      <td>1g0oewr</td>\n",
+       "      <th>345</th>\n",
+       "      <td>Weekend Discussion Thread for the Weekend of O...</td>\n",
+       "      <td>131</td>\n",
+       "      <td>1g1il66</td>\n",
        "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1.728582e+09</td>\n",
-       "      <td>Listen up regards,\\n\\n[https://13f.info/manage...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>495</th>\n",
-       "      <td>Why is Warren Buffett hoarding such a huge cas...</td>\n",
-       "      <td>4406</td>\n",
-       "      <td>1fyzh4n</td>\n",
-       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
-       "      <td>1227</td>\n",
-       "      <td>1.728393e+09</td>\n",
-       "      <td>https://preview.redd.it/u8w3e24o7jtd1.png?widt...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>496</th>\n",
-       "      <td>Just Another Day in the Life of a Retail Investor</td>\n",
-       "      <td>29417</td>\n",
-       "      <td>1fw6qhb</td>\n",
-       "      <td>https://i.redd.it/031uuuntcssd1.jpeg</td>\n",
-       "      <td>296</td>\n",
-       "      <td>1.728068e+09</td>\n",
-       "      <td></td>\n",
+       "      <td>6103</td>\n",
+       "      <td>1.728677e+09</td>\n",
+       "      <td>This post contains content not supported on ol...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>497 rows × 7 columns</p>\n",
+       "<p>346 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                                 title  score       id  \\\n",
-       "0       What Are Your Moves Tomorrow, October 22, 2024     67  1g8z4d2   \n",
-       "1                  Weekly Earnings Thread 10/21 -10/25    309  1g6yf0l   \n",
-       "2                       Just put the fries in the bag    1633  1g8yz6v   \n",
-       "3    HOW DO I TELL MY PARENTS / FIANCÉ I LOST ALL M...   1729  1g8tfk7   \n",
-       "4                                NVDA put buyers today    397  1g8zu8l   \n",
+       "0       What Are Your Moves Tomorrow, October 22, 2024     81  1g8z4d2   \n",
+       "1    HOW DO I TELL MY PARENTS / FIANCÉ I LOST ALL M...   1999  1g8tfk7   \n",
+       "2              All eggs in one basket since last year.    253  1g8ze2n   \n",
+       "3    Decade of Big S&P 500 Gains Is Over, Goldman S...   1132  1g8nu3u   \n",
+       "4    What happens when a stock falls out of the S&P...    298  1g8u2a5   \n",
        "..                                                 ...    ...      ...   \n",
-       "492         Betted on TSLA event failing and it worked    104  1g1hx64   \n",
-       "493                                   Optimus can talk   1632  1g11zlm   \n",
-       "494      Private Equity Taking Peloton Private? (PTON)     24  1g0oewr   \n",
-       "495  Why is Warren Buffett hoarding such a huge cas...   4406  1fyzh4n   \n",
-       "496  Just Another Day in the Life of a Retail Investor  29417  1fw6qhb   \n",
+       "341        4600% on some lotto tickets.  Thanks AFRM 🫡    130  1g1o5lc   \n",
+       "342                               Tesla short results     831  1g1afzh   \n",
+       "343                            Being late pays off ig      44  1g1qzqz   \n",
+       "344           Who said Options couldn't be profitable?      9  1g1xlwx   \n",
+       "345  Weekend Discussion Thread for the Weekend of O...    131  1g1il66   \n",
        "\n",
        "                                                   url  comms_num  \\\n",
-       "0    https://www.reddit.com/r/wallstreetbets/commen...       1438   \n",
-       "1                 https://i.redd.it/5e4zyncicmvd1.jpeg        532   \n",
-       "2                 https://i.redd.it/6213bf29z5wd1.jpeg         53   \n",
-       "3    https://www.reddit.com/r/wallstreetbets/commen...       1034   \n",
-       "4                 https://i.redd.it/mn59i2ac56wd1.jpeg         25   \n",
+       "0    https://www.reddit.com/r/wallstreetbets/commen...       1825   \n",
+       "1    https://www.reddit.com/r/wallstreetbets/commen...       1104   \n",
+       "2               https://www.reddit.com/gallery/1g8ze2n         70   \n",
+       "3    https://finance.yahoo.com/news/p-500-decade-bi...        285   \n",
+       "4    https://www.investopedia.com/delisting-a-stock...         45   \n",
        "..                                                 ...        ...   \n",
-       "492               https://i.redd.it/c8mqsz8sh6ud1.jpeg          9   \n",
-       "493                    https://v.redd.it/j4g0ig4g42ud1        503   \n",
-       "494  https://www.reddit.com/r/wallstreetbets/commen...         10   \n",
-       "495  https://www.reddit.com/r/wallstreetbets/commen...       1227   \n",
-       "496               https://i.redd.it/031uuuntcssd1.jpeg        296   \n",
+       "341             https://www.reddit.com/gallery/1g1o5lc         29   \n",
+       "342             https://www.reddit.com/gallery/1g1afzh         76   \n",
+       "343               https://i.redd.it/grk1wjn6r8ud1.jpeg          4   \n",
+       "344                https://i.redd.it/amv2fztp3bud1.png         21   \n",
+       "345  https://www.reddit.com/r/wallstreetbets/commen...       6103   \n",
        "\n",
        "          created                                               body  \n",
        "0    1.729541e+09  This post contains content not supported on ol...  \n",
-       "1    1.729303e+09                                                     \n",
-       "2    1.729540e+09                                                     \n",
-       "3    1.729527e+09  I’ll get a whole lecture if they find out, so ...  \n",
-       "4    1.729542e+09                                                     \n",
+       "1    1.729527e+09  I’ll get a whole lecture if they find out, so ...  \n",
+       "2    1.729541e+09  All long term investments (started Aug 2021). ...  \n",
+       "3    1.729512e+09  >The S&P 500 Index is expected to post an annu...  \n",
+       "4    1.729528e+09                                                 ni  \n",
        "..            ...                                                ...  \n",
-       "492  1.728675e+09                                                     \n",
-       "493  1.728622e+09                                                     \n",
-       "494  1.728582e+09  Listen up regards,\\n\\n[https://13f.info/manage...  \n",
-       "495  1.728393e+09  https://preview.redd.it/u8w3e24o7jtd1.png?widt...  \n",
-       "496  1.728068e+09                                                     \n",
+       "341  1.728693e+09      Too bad I sold 80 contracts for a 40% gain 😭😭  \n",
+       "342  1.728655e+09                The shit show paid out as expected   \n",
+       "343  1.728702e+09  LITERALLY ALMOST NEVER CAN YOU GET INTO A TRAD...  \n",
+       "344  1.728731e+09  ₹ 1L = ₹ 100000 for those wondering, wanted to...  \n",
+       "345  1.728677e+09  This post contains content not supported on ol...  \n",
        "\n",
-       "[497 rows x 7 columns]"
+       "[346 rows x 7 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +340,8 @@
     "import pandas as pd\n",
     "\n",
     "df = pd.DataFrame(postData)\n",
-    "df"
+    "df\n",
+    "\n"
    ]
   }
  ],
